# irc-simple

./: .gitignore  ChangeLog.md  LICENSE  Readme.markdown  cabal.project.freeze  irc-simple.cabal
app/: client.hs  server.hs
src/: Client.hs  Protocol.hs  Server.hs  Uni.hs
src/Protocol/: Errors.hs  Parser.hs  Replies.hs  Types.hs  Wire.hs
src/Server/: Channel.hs  Handler.hs  Internal.hs  User.hs
tests/: unit.hs
tests/Test/Protocol/: Parser.hs
